welcome.lessons.welcome.methods.slug.SlugTracking.scala.error
SlugTracking:6: error: type mismatch;
 found   : Unit
 required: Boolean
		avance();
                      ^SlugTracking:9: error: type mismatch;
 found   : Unit
 required: Boolean
			retourne(); avance(); avance(); }
                                                    ^SlugTracking:8: error: type mismatch;
 found   : Unit
 required: Boolean
		gauche(); avance(); if (getCouleurSol() != Color.green) {
                                    ^